Descomplicando_Kubernetes/day-11/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas-static
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: / # Independente do path que eu informaro nginx vai direcionar para o /
spec:
  rules:
  - http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
