Descomplicando_Kubernetes/day-11/ingress-6-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

    # Utilizando o letsencrypt
    cert-manager.io/cluster-issuer: letsencrypt-prod
 
    # Canary Deployment
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "90" # % que vai para o novo cara

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - giropops.deltcom.com.br
    secretName: letsencrypt-prod
  rules:
  - host: giropops.deltcom.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
